force-app/main/default/objects/Activity/fields/FOPS_Feedback_Received__c.field-meta.xml
<CustomField>
    <fullName>FOPS_Feedback_Received__c</fullName>
    <label>Feedback Received</label>
    <type>TextArea</type>
</CustomField>