force-app/main/default/objects/Activity/fields/FOPS_My_Notes__c.field-meta.xml
<CustomField>
    <fullName>FOPS_My_Notes__c</fullName>
    <label>My Notes</label>
    <length>8000</length>
    <type>LongTextArea</type>
</CustomField>