force-app/main/default/objects/Activity/fields/FOPS_Questions_Asked__c.field-meta.xml
<CustomField>
    <fullName>FOPS_Questions_Asked__c</fullName>
    <inlineHelpText>This compounds into a personal interview knowledge base. Log every one.</inlineHelpText>
    <label>Questions Asked</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>